--- a/happiness.html
+++ b/happiness.html
@@ -69,6 +69,21 @@
         </div>
       </nav>
     </header>
+
+
+
+
+<br><br>
+    <div class="container mt-5" style="margin-top: 100px;">
+      <div class="row">
+        <div class="col-md-12">
+      <p class="text3">Established in 2020, Glee is an incense sticks company, guided by the passion for fragrances. Made from purest oils and ingredients, we have the best range of premium incense sticks including - Flora Muse, Musk Love, White Sandal and Secret Crush. <br>
+        Glee is exploring new ways of generating high-quality scent while holding low smoke emissions. Using new techniques and high-quality raw materials glee has achieved the goal and provides high quality incense sticks generating less smoke. While we emphasize high-quality scent with low smoke emissions, we also want to contribute to society. <br>
+        Glee intends to have a social impact by spreading fragrances.Glee has made a mission to contribute to the education sector by sponsoring underprivileged kids and providing them with books and other educational stuff
+     </p>
+      </div>  
+    </div>
+    </div>
     
   <!-- gallary -->
 
@@ -168,20 +183,7 @@
 	</div>
 </div>
 
-<hr><hr>
-<!--gallary-->
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-  <p class="text3">Glee intends to have a social impact by spreading fragrances. Glee has made a mission  to contribute in education sector by providing underprivileged kids with books and other educational stuffs. 
-    We have pledged to use a part of our profit for sponsoring underprivileged kids and distributing books in  libraries, schools, hospitals, prisons, refugee camps and rural communities. 
-   <br> We, Glee Fragrances, are trying to  spread happiness with our fragrances. 
-   Join hands together with Glee fragrances to spread happiness. Each incense stick makes you stakeholder in sponsoring underprivileged kids.
- </p>
-  </div>  
-</div>
-</div>
-<hr><hr>
+
 <br>
     <footer class="ps-footer">
         <div class="ps-footer__content">
