--- a/happiness.html
+++ b/happiness.html
@@ -89,7 +89,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
 
-<div class="gallery" style="margin-top:100px;">
+<div class="gallery mt-5">
 	<div class="gallery__column" style="margin-left: 0px;">
 		<a href="" target="_blank" class="gallery__link">
 			<figure class="gallery__thumb">
